shmuel 2023-11-29 13:32:22+02:00 - build 794

1. LuaFAR: refactoring.

shmuel 2023-11-29 09:55:46+02:00 - build 793

1. LuaFAR: refactoring.

shmuel 2023-11-26 22:20:14+02:00 - build 792

1. LuaFAR: refactoring.

shmuel 2023-11-23 00:10:29+02:00 - build 791

1. LuaFAR: warnings.

shmuel 2023-11-22 23:56:58+02:00 - build 790

1. LuaFAR: warnings.

shmuel 2023-11-21 20:39:31+02:00 - build 789

1. Far.GetConfig() is implemented entirely in Far.exe (was: Far + LuaMacro).

shmuel 2023-11-16 19:03:27+02:00 - build 788

1. LuaFAR: add functions far.CheckMask, far.CmpName, far.CmpNameList, far.GenerateName.

shmuel 2023-11-15 20:40:58+02:00 - build 787

1. LuaFAR: far.ColorDialog() always returns a table --> an API change.
   (Previously it returned a table or an integer depending on its argument).

shmuel 2023-10-28 01:13:50+03:00 - build 786

1. Fix build 784

shmuel 2023-10-28 01:00:44+03:00 - build 785

1. Fix build 784

shmuel 2023-10-28 00:33:46+03:00 - build 784

1. LuaFAR: DM_GETDLGDATA and DM_SETDLGDATA made available to scripts.

shmuel 2023-10-27 18:55:57+03:00 - build 783

1. LuaFAR: make far.GetPluginDirList more straightforward.

shmuel 2023-10-21 01:02:22+03:00 - build 782

1. Fix lm:about for new LPeg versions

johnd0e 2023-09-15 10:00:00+02:00 - build 781

1. LuaFAR: update luautf8 library to 0.1.5-3-gf736301

   Update to Unicode 15.1

johnd0e 2023-09-14 12:59:00+02:00 - build 780

1. LuaFAR: update luautf8 library to 0.1.5-2-g182575d

   Unicode normalize algorithm implemented.

   New functions:
   - utf8.isnfc(s) -> boolean
     check whether s is in Normal Form C or not.
   - utf8.normalize_nfc(s) -> normal_string, was_nfc
     convert s to Normal Form C.

   See https://github.com/starwing/luautf8/pull/44/files#diff-b335630551682c19a781afebcf4d07bf978fb1f8ac04c6bf87428ed5106870f5 for more info.

shmuel 2023-07-15 08:51:10+03:00 - build 779

1. LuaFAR: a flag combination may be specified as a string (space-delimitered).
